syntax = "proto3";

package ai.sendy.victor.grpc.echo;

option java_multiple_files = true;
option java_package = "echo";
option java_outer_classname = "EchoProto";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}
